crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__method__arity.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/arity.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1)
      (method method0 [] []
         (block
            (return "no args")))
      (method method1 [(local a @0)] []
         (block
            (return (local a @0))))
      (method method2 [(local a @0) (local b @1)] []
         (block
            (return (+ (local a @0) (local b @1)))))
      (method method3 [(local a @0) (local b @1) (local c @2)] []
         (block
            (return (+ (+ (local a @0) (local b @1)) (local c @2)))))
      (method method4 [(local a @0) (local b @1) (local c @2) (local d @3)] []
         (block
            (return (+ (+ (+ (local a @0) (local b @1)) (local c @2)) (local d @3)))))
      (method method5 [(local a @0) (local b @1) (local c @2) (local d @3) (local e @4)] []
         (block
            (return (+ (+ (+ (+ (local a @0) (local b @1)) (local c @2)) (local d @3)) (local e @4)))))
      (method method6 [(local a @0) (local b @1) (local c @2) (local d @3) (local e @4) (local f @5)] []
         (block
            (return (+ (+ (+ (+ (+ (local a @0) (local b @1)) (local c @2)) (local d @3)) (local e @4)) (local f @5)))))
      (method method7 [(local a @0) (local b @1) (local c @2) (local d @3) (local e @4) (local f @5) (local g @6)] []
         (block
            (return (+ (+ (+ (+ (+ (+ (local a @0) (local b @1)) (local c @2)) (local d @3)) (local e @4)) (local f @5)) (local g @6)))))
      (method method8 [(local a @0) (local b @1) (local c @2) (local d @3) (local e @4) (local f @5) (local g @6) (local h @7)] []
         (block
            (return (+ (+ (+ (+ (+ (+ (+ (local a @0) (local b @1)) (local c @2)) (local d @3)) (local e @4)) (local f @5)) (local g @6)) (local h @7))))))
   (var foo (global @2) (call +2 (global Foo @1)))
   (print (call +3 (attr (global foo @2) method0)))
   (print (call +3 (attr (global foo @2) method1) 1.0))
   (print (call +3 (attr (global foo @2) method2) 1.0 2.0))
   (print (call +3 (attr (global foo @2) method3) 1.0 2.0 3.0))
   (print (call +3 (attr (global foo @2) method4) 1.0 2.0 3.0 4.0))
   (print (call +3 (attr (global foo @2) method5) 1.0 2.0 3.0 4.0 5.0))
   (print (call +3 (attr (global foo @2) method6) 1.0 2.0 3.0 4.0 5.0 6.0))
   (print (call +3 (attr (global foo @2) method7) 1.0 2.0 3.0 4.0 5.0 6.0 7.0))
   (print (call +3 (attr (global foo @2) method8) 1.0 2.0 3.0 4.0 5.0 6.0 7.0 8.0)))

----- stderr -----
