crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__method__too_many_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/too_many_arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var a (local @1) 1.0)
      (expr (call +2 (attr true method) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1) (local a @1)))))

----- stderr -----
