crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__method__too_many_parameters.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/too_many_parameters.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method method [(local this @0) (local a1 @1) (local a2 @2) (local a3 @3) (local a4 @4) (local a5 @5) (local a6 @6) (local a7 @7) (local a8 @8) (local a9 @9) (local a10 @10) (local a11 @11) (local a12 @12) (local a13 @13) (local a14 @14) (local a15 @15) (local a16 @16) (local a17 @17) (local a18 @18) (local a19 @19) (local a20 @20) (local a21 @21) (local a22 @22) (local a23 @23) (local a24 @24) (local a25 @25) (local a26 @26) (local a27 @27) (local a28 @28) (local a29 @29) (local a30 @30) (local a31 @31) (local a32 @32) (local a33 @33) (local a34 @34) (local a35 @35) (local a36 @36) (local a37 @37) (local a38 @38) (local a39 @39) (local a40 @40) (local a41 @41) (local a42 @42) (local a43 @43) (local a44 @44) (local a45 @45) (local a46 @46) (local a47 @47) (local a48 @48) (local a49 @49) (local a50 @50) (local a51 @51) (local a52 @52) (local a53 @53) (local a54 @54) (local a55 @55) (local a56 @56) (local a57 @57) (local a58 @58) (local a59 @59) (local a60 @60) (local a61 @61) (local a62 @62) (local a63 @63) (local a64 @64) (local a65 @65) (local a66 @66) (local a67 @67) (local a68 @68) (local a69 @69) (local a70 @70) (local a71 @71) (local a72 @72) (local a73 @73) (local a74 @74) (local a75 @75) (local a76 @76) (local a77 @77) (local a78 @78) (local a79 @79) (local a80 @80) (local a81 @81) (local a82 @82) (local a83 @83) (local a84 @84) (local a85 @85) (local a86 @86) (local a87 @87) (local a88 @88) (local a89 @89) (local a90 @90) (local a91 @91) (local a92 @92) (local a93 @93) (local a94 @94) (local a95 @95) (local a96 @96) (local a97 @97) (local a98 @98) (local a99 @99) (local a100 @100) (local a101 @101) (local a102 @102) (local a103 @103) (local a104 @104) (local a105 @105) (local a106 @106) (local a107 @107) (local a108 @108) (local a109 @109) (local a110 @110) (local a111 @111) (local a112 @112) (local a113 @113) (local a114 @114) (local a115 @115) (local a116 @116) (local a117 @117) (local a118 @118) (local a119 @119) (local a120 @120) (local a121 @121) (local a122 @122) (local a123 @123) (local a124 @124) (local a125 @125) (local a126 @126) (local a127 @127) (local a128 @128) (local a129 @129) (local a130 @130) (local a131 @131) (local a132 @132) (local a133 @133) (local a134 @134) (local a135 @135) (local a136 @136) (local a137 @137) (local a138 @138) (local a139 @139) (local a140 @140) (local a141 @141) (local a142 @142) (local a143 @143) (local a144 @144) (local a145 @145) (local a146 @146) (local a147 @147) (local a148 @148) (local a149 @149) (local a150 @150) (local a151 @151) (local a152 @152) (local a153 @153) (local a154 @154) (local a155 @155) (local a156 @156) (local a157 @157) (local a158 @158) (local a159 @159) (local a160 @160) (local a161 @161) (local a162 @162) (local a163 @163) (local a164 @164) (local a165 @165) (local a166 @166) (local a167 @167) (local a168 @168) (local a169 @169) (local a170 @170) (local a171 @171) (local a172 @172) (local a173 @173) (local a174 @174) (local a175 @175) (local a176 @176) (local a177 @177) (local a178 @178) (local a179 @179) (local a180 @180) (local a181 @181) (local a182 @182) (local a183 @183) (local a184 @184) (local a185 @185) (local a186 @186) (local a187 @187) (local a188 @188) (local a189 @189) (local a190 @190) (local a191 @191) (local a192 @192) (local a193 @193) (local a194 @194) (local a195 @195) (local a196 @196) (local a197 @197) (local a198 @198) (local a199 @199) (local a200 @200) (local a201 @201) (local a202 @202) (local a203 @203) (local a204 @204) (local a205 @205) (local a206 @206) (local a207 @207) (local a208 @208) (local a209 @209) (local a210 @210) (local a211 @211) (local a212 @212) (local a213 @213) (local a214 @214) (local a215 @215) (local a216 @216) (local a217 @217) (local a218 @218) (local a219 @219) (local a220 @220) (local a221 @221) (local a222 @222) (local a223 @223) (local a224 @224) (local a225 @225) (local a226 @226) (local a227 @227) (local a228 @228) (local a229 @229) (local a230 @230) (local a231 @231) (local a232 @232) (local a233 @233) (local a234 @234) (local a235 @235) (local a236 @236) (local a237 @237) (local a238 @238) (local a239 @239) (local a240 @240) (local a241 @241) (local a242 @242) (local a243 @243) (local a244 @244) (local a245 @245) (local a246 @246) (local a247 @247) (local a248 @248) (local a249 @249) (local a250 @250) (local a251 @251) (local a252 @252) (local a253 @253) (local a254 @254) (local a255 @255) (local a @256)] []
         (block))))

----- stderr -----
